# bmstu_iu7_mdpl

./: README.md
lab_04/: README.md  funcs.asm  main.asm
lab_05/: README.md  main.asm
lab_06/: README.md  build.bat  main.asm  print_s8.asm  print_u2.asm  scan_u16.asm
lab_07/: README.md  main.asm
lab_08/: CMakeLists.txt  README.md
lab_08/include/asm_string/: asm_string.h
lab_08/src/: asm_strlen.c  asm_strncpy.s
lab_08/test/: unit_asm_strlen.c  unit_asm_strlen.h  unit_asm_strncpy.c  unit_asm_strncpy.h  unit_main.c
lab_09/: .gitignore  CMakeLists.txt  README.md
lab_09/src/: comparison_double.c  comparison_double.h  comparison_float.c  comparison_float.h  comparison_float.s  comparison_long_double.c  comparison_long_double.h  comparison_sin_pi.c  comparison_sin_pi.h  comparison_table.c  comparison_table.h  main.c  utils.h
lab_10/: README.md
lab_10/src/src/: asm_scalar_prod.c  c_scalar_prod.c
lab_11/: Makefile  README.md  app.asm
